--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -14,16 +14,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="3dp"
         android:adjustViewBounds="true">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvEmployee"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:elevation="3dp"
-        card_view:cardCornerRadius="1dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/grey_border">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -52,6 +49,6 @@
         android:layout_marginLeft="30dp" />
 
 </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        </RelativeLayout>
     </LinearLayout>
 </layout>
